--- a/app/index.html
+++ b/app/index.html
@@ -357,7 +357,7 @@
          </section>
          <section class="section support">
             <div class="container-fluid">
-               <div class="row no-gutters align-items-strech flex-row-reverse justify-content-between">
+               <div class="row no-gutters align-items-center flex-row-reverse justify-content-between">
                   <div class="col-lg-6">
                      <div class="photo d-flex justify-content-end">
                         <img src="img/3.jpg" alt="" class="photo__front is--hover">
